Avoid or suppress deprecation warnings